--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "homebridge-gate-latch",
-  "version": "1.1.0",
-  "author": "voxmatt",
-  "description": "Doorbell plugin for Homebridge to enable control of an old doorbell and front-gate latch",
+  "name": "homebridge-door-bell",
+  "version": "1.0.0",
+  "author": "dural",
+  "description": "Doorbell plugin for Homebridge",
   "license": "ISC",
   "keywords": [
     "homebridge-plugin"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/voxmatt/doorbell.git"
+    "url": "git+https://github.com/dural/doorbell.git"
   },
   "bugs": {
-    "url": "https://github.com/voxmatt/doorbell/issues"
+    "url": "https://github.com/dural/doorbell/issues"
   },
-  "homepage": "https://github.com/voxmatt/doorbell#readme",
+  "homepage": "https://github.com/dural/doorbell#readme",
   "engines": {
     "node": ">=0.12.0",
     "homebridge": ">=0.2.0"
